// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsSheet snapshot with nothing enabled 1`] = `
<div
  className="css-1alsdwv"
>
  <div
    className="css-14m1iua"
  >
    <div
      className="css-1k4677w"
    >
      <span
        className="css-15682x"
      >
        Select the plugins for which you want to export the data
      </span>
      <div
        className="css-9dmkpi"
      >
        <div
          className="css-1k4677w"
        >
          <div
            className="css-1obf64m"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-a1glw"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-1cegttb"
                >
                  TestDevicePlugin
                </span>
                <div
                  className="css-12zzrdt"
                />
                <input
                  checked={false}
                  className="css-1y77uts"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1nj3es"
            />
          </div>
        </div>
        <div
          className="css-1k4677w"
        >
          <div
            className="css-1obf64m"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-a1glw"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-1cegttb"
                >
                  TestPlugin
                </span>
                <div
                  className="css-12zzrdt"
                />
                <input
                  checked={false}
                  className="css-1y77uts"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1nj3es"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1yqvjo0"
    >
      <div
        className="css-a1glw"
      >
        <div
          className="css-12zzrdt"
        />
        <div
          className="css-12n892b"
        >
          <div
            className="css-1ee9nwd"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            Close
          </div>
        </div>
        <div
          className="css-1obf64m"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="css-6lxjsf"
            disabled={true}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="primary"
          >
            Submit
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SettingsSheet snapshot with one plugin enabled 1`] = `
<div
  className="css-1alsdwv"
>
  <div
    className="css-14m1iua"
  >
    <div
      className="css-1k4677w"
    >
      <span
        className="css-15682x"
      >
        Select the plugins for which you want to export the data
      </span>
      <div
        className="css-9dmkpi"
      >
        <div
          className="css-1k4677w"
        >
          <div
            className="css-1obf64m"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-a1glw"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-1cegttb"
                >
                  TestDevicePlugin
                </span>
                <div
                  className="css-12zzrdt"
                />
                <input
                  checked={false}
                  className="css-1y77uts"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1nj3es"
            />
          </div>
        </div>
        <div
          className="css-1k4677w"
        >
          <div
            className="css-1obf64m"
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <div
              className="css-1jrm6r3"
            >
              <div
                className="css-a1glw"
                style={
                  Object {
                    "alignItems": "center",
                  }
                }
              >
                <span
                  className="css-1cegttb"
                >
                  TestPlugin
                </span>
                <div
                  className="css-12zzrdt"
                />
                <input
                  checked={true}
                  className="css-1y77uts"
                  disabled={false}
                  onChange={[Function]}
                  type="checkbox"
                />
              </div>
            </div>
            <div
              className="css-1nj3es"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="css-1yqvjo0"
    >
      <div
        className="css-a1glw"
      >
        <div
          className="css-12zzrdt"
        />
        <div
          className="css-12n892b"
        >
          <div
            className="css-1ee9nwd"
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
          >
            Close
          </div>
        </div>
        <div
          className="css-1obf64m"
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="css-1ee9nwd"
            disabled={false}
            onClick={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="primary"
          >
            Submit
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
